sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              EMBEDDING MODELS                               */
/* ========================================================================== */

/** Embedding generation configuration */
typedef struct {
    int32_t     batch_size;       /* Processing batch size */
    bool        normalize;        /* Whether to normalize embeddings */
    const char* normalize_method; /* Normalization: "l2", "mean", "none" */
} ml_EmbeddingConfig;
typedef struct ml_Embedder ml_Embedder; /* Opaque embedder handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating an embedder */
typedef struct {
    const char*    model_name;     /** Name of the model */
    ml_Path        model_path;     /** Path to the model file */
    ml_Path        mmproj_path;    /** Path to the mmproj file */
    ml_Path        tokenizer_path; /** Path to the tokenizer file */
    ml_ModelConfig config;         /** Model configuration */
    ml_PluginId    plugin_id;      /** Plugin to use for the model */
    const char*    device_id;      /** device to use for the model */
} ml_EmbedderCreateInput;
/**
 * @brief Create and initialize an embedder instance from model files
 *
 * @param input[in]: Input parameters for the embedder creation
 * @param out_handle[out]: Pointer to the embedder handle. Must be freed with ml_embedder_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_embedder_create(const ml_EmbedderCreateInput* input, ml_Embedder** out_handle);
/**
 * @brief Destroy embedder instance and free associated resources
 *
 * @param handle[in]: The embedder handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_embedder_destroy(ml_Embedder* handle);
/* ====================  Embedding Generation  ============================= */

/** Input structure for embedding generation */
typedef struct {
    const char**              texts;        /** Array of input texts in UTF-8 encoding */
    int32_t                   text_count;   /** Number of input texts */
    const ml_EmbeddingConfig* config;       /** Embedding configuration (optional, can be nullptr) */
    const int32_t**           input_ids_2d; /** 2D array of already tokenized raw input ids.
                                             * When passed in, texts will be ignored.
                                             * NOTE: this is supported for llama_cpp backend only.
                                             * Passing this param to other backends will be ignored */
    const int32_t* input_ids_row_lengths;   /** Array containing the length of each row in input_ids_2d */
    int32_t        input_ids_row_count;     /** Number of rows in input_ids_2d array */
    const char*    task_type;               /** Task type: "query", "document" */

    /* ====================  Image inputs (for multimodal embedders)  ============================= */

    ml_Path* image_paths; /** Array of image file paths to embed (UTF-8).
                           *  When non-NULL and image_count > 0, the call is treated as
                           *  an image embedding request.
                           *
                           *  Each path should point to an image file in a supported format
                           *  for the underlying plugin/model (e.g. PNG/JPEG).
                           *
                           *  NOTE: Text/token inputs and image inputs are mutually exclusive.
                           *  Providing both will result in ML_ERROR_COMMON_INVALID_INPUT. */
    int32_t image_count;  /** Number of images in image_paths. */

    /* ====================  Video inputs (for multimodal embedders)  ============================= */

    ml_Path* video_paths; /** Array of video file paths to embed (UTF-8).
                           *  When non-NULL and video_count > 0, the call is treated as
                           *  a video embedding request.
                           *
                           *  Each path should point to a video file in a supported format
                           *  for the underlying plugin/model (e.g. MP4/AVI). */
    float* video_starts;  /** Array of start times for each video in seconds. Should be the same length as
                                  video_count.*/
    float* video_ends;    /** Array of end times for each video in seconds. Should be the same length as video_count.
                           * NOTE: video_starts and video_ends must be provided together. */
    int32_t video_count;  /** Number of videos in video_paths, video_starts, and video_ends. */
} ml_EmbedderEmbedInput;
/** Output structure for embedding generation */
typedef struct {
    float*         embeddings;      /** Output embeddings array (caller must free with ml_free) */
    int32_t        embedding_count; /** Number of embeddings returned */
    ml_ProfileData profile_data;    /** Profiling data for the embedding generation */
} ml_EmbedderEmbedOutput;
/**
 * @brief Generate embeddings for input texts
 *
 * @param handle[in]: Embedder handle
 * @param input[in]: Input parameters for embedding generation
 * @param output[out]: Output data containing the generated embeddings
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_embedder_embed(
    ml_Embedder* handle, const ml_EmbedderEmbedInput* input, ml_EmbedderEmbedOutput* output);
/* ====================  Model Information  ================================ */

/** Output structure for getting embedding dimension */
typedef struct {
    int32_t dimension; /** The embedding dimension size */
} ml_EmbedderDimOutput;
/**
 * @brief Get embedding dimension from the model
 *
 * @param handle[in]: Embedder handle
 * @param output[out]: Output data containing the embedding dimension
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe
 */
ML_API int32_t ml_embedder_embedding_dim(const ml_Embedder* handle, ml_EmbedderDimOutput* output);